--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "axios": "^1.6.8",
     "formik": "^2.4.6",
     "modern-normalize": "^2.0.0",
@@ -17,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.13.8",
     "yup": "^1.4.0"
   },
   "devDependencies": {
